test: add unit tests for AchievementProvider and DuelProvider to enhance coverage